--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -65,7 +65,11 @@ dataset:
   data_type: 'sequence'
   augment: True
   params:
-    end_cutoff_timesteps: 8 # Used for Lucas' dataset
+    end_cutoff_timesteps: 8 # Used for Lucas' dataset. TODO: any additional args go here. 
+    taus:
+      cmod: 10
+      d3d: 75
+      east: 200
     len_aug_args:
       tiny_clip_max_len: 30
       tiny_clip_prob: 0.05
@@ -73,6 +77,8 @@ dataset:
       disrupt_trim_prob: 0.2
       nondisr_cut_min: 1
       nondisr_cut_prob: 0.3
+      tau_trim_max: 10
+      tau_trim_prob: 0.2
     modelnet:
       num_nodes: -1         # For ModelNet. Number of nodes to sample.
       resampling_factor: 1  # For ModelNet. Number of times to resample each mesh in the training set.
