adding case number to the config

--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -64,6 +64,7 @@ dataset:
   data_dir: 'data/'
   data_type: 'sequence'
   augment: True
+  case_number: 10
   params:
     end_cutoff_timesteps: 8 # Used for Lucas' dataset. TODO: any additional args go here. 
     taus:
