first curriculum_commit

--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -65,6 +65,7 @@ dataset:
   augment: True
   params:
     case_number: 12
+    curriculum_learning: 0
     end_cutoff_timesteps: 8 # Used for Lucas' dataset. TODO: any additional args go here. 
     taus:
       cmod: 10
